# wageslave

./: .gitignore  README.md  pyproject.toml
wageslave/: Dockerfile  __main__.py  cli.py  config.py  docker.py  entrypoint.sh  setup.py
wageslave/skill/: SKILL.md
