[project]
name = "wageslave"
version = "0.0.0"
description = "Run git/gh with personal GitHub credentials inside Docker containers"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wageslave = "wageslave.cli:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
